crates/rolldown/tests/rolldown/errors/invalid_option/include_dependencies_recursively_conflict_preserve_entry_signatures/main.js
import { value } from './lib.js';

console.log('Main entry:', value);

export function main() {
  return 'main function';
}